Fixed alignment issue on view deparment

--- a/src/utils/styles.module.css
+++ b/src/utils/styles.module.css
@@ -18,12 +18,6 @@
     max-height: 450px;
     max-width: 400px;
 }
-
-.deletableCard {
-    max-height: 300px;
-    max-width: 400px;
-}
-
 .largeButton {
     color: black;
     width: 350px;
